# Taumaturgia

./: .clang-format  CMakeLists.txt  LICENSE  ObjectActions.hpp  Pipeing.md  README.md  main.cpp  main_minimal.cpp  main_simple.cpp  main_tests.cpp  preety_print.hpp  structs.hpp
Examples/: Benchmark.hpp  CMakeLists.txt  Checks.hpp  Examples.cmake  Print.hpp  basic_strategies.hpp  demangle_type_name.hpp  improved_types.hpp  is_base_of_template.hpp  is_derived_from_template_base.hpp  preety_print.hpp  preety_print_types.hpp  property_A.hpp  property_B.hpp  property_C.hpp  structs.hpp
Examples/Features/: CMakeLists.txt  improving.cpp
Examples/Introduction/: 1.0.cpp  1.0a.cpp  1.0b.cpp  1.0c.cpp  1.0d.cpp  1.0e.cpp  1.0f.cpp  1.1.cpp  1.1a.cpp  1.1b.cpp  1.1c.cpp  CMakeLists.txt
Examples/Main/: Actions.hpp  Benchmark.hpp  CMakeLists.txt  FillBackpack.hpp  FillBackpack_1.hpp  FillBackpack_2.hpp  Print.hpp  basic_strategies.hpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main_1.cpp  main_2.cpp  main_Property.cpp  main_add_properties.cpp  main_build_into_t.cpp  main_create_ordered_property_list.cpp  main_have_properties.cpp  main_ignore_and_tuple.cpp  main_introduction.cpp  main_mix_give_properties.cpp  main_part.cpp  main_scheme.cpp  main_simple.cpp  main_user_property.cpp  main_user_property_2.cpp  properties.hpp  property_A.hpp  property_B.hpp  structs.hpp  structs_aP.hpp  structs_no_aP.hpp
Examples/MainExamples/: CMakeLists.txt  main-delete.cpp  main-example.cpp  main-example2.cpp  main_Property.cpp  main_Property_priority.cpp  main_add_properties.cpp  main_build_into_t.cpp  main_constexpr_traits.cpp  main_constructors.cpp  main_create_ordered_property_list.cpp  main_have_properties.cpp  main_ignore_and_tuple.cpp  main_improve_properties.cpp  main_introduction.cpp  main_mix_give_properties.cpp  main_plain_properties.cpp  main_project_advancing.cpp  main_scheme.cpp  main_user_property.cpp  main_user_property_2.cpp  main_user_property_3.cpp  order_list.hpp
Examples/MainExamples/add_property_examples/: CMakeLists.txt  example1.cpp  main_add_properties.cpp
Examples/MainExamples/helpers_examples/: CMakeLists.txt  main_build_into_t.cpp  main_create_ordered_property_list.cpp  main_have_properties.cpp  main_improve_properties.cpp  main_mix_give_properties.cpp  main_scheme.cpp
Examples/Minimal/: CMakeLists.txt  main_minimal.cpp
Examples/PreetyPrint/: Color_print.hpp  PrintActionStatus.hpp  PrintAliveStatus.hpp  PrintBodyLocation.hpp  PrintCureHealth.hpp  PrintDamage.hpp  PrintDamageType.hpp  PrintDamagingable.hpp  PrintDuration.hpp  PrintDurationType.hpp  PrintEffect.hpp  PrintEffectContainer.hpp  PrintEffectState.hpp  PrintEffectType.hpp  PrintEffectTypeContainer.hpp  PrintHealth.hpp  PrintName.hpp  PrintProtection.hpp  PrintProtectionContainer.hpp  PrintState.hpp  PrintWearContainer.hpp  PrintWrapper.hpp  Redirect.hpp  preety_print.hpp  preety_print_types.hpp
Examples/Simple/: Base.hpp  CMakeLists.txt  UnorderedCtor.hpp  main_fix.cpp  main_ignore_order.cpp  main_pipe.cpp  main_simple.cpp  main_simple_1.cpp  main_token.cpp  order_assertions.hpp
Examples/Simple/Fix/: Empty.hpp  Item.hpp  LivingTile.hpp  Tile.hpp  Weird.hpp  WeirdTile.hpp  main_fix.cpp
Examples/Simple/Pipe/: Base.hpp  CMakeLists.txt  TokenCtor.hpp  With.hpp  custom_order_list.hpp  default_values.hpp  main_pipe0.cpp  main_pipe1-1.cpp  main_pipe1-2.cpp  main_pipe2.cpp  main_pipe3.cpp  main_pipe4.cpp  main_pipe_introduction.cpp  print.hpp  update.hpp
Examples/Simple/Simple/: Armor.hpp  Item.hpp  Player.hpp  Player_B.hpp  Weapon_A.hpp  Weapon_B.hpp  Weapon_C.hpp  main_simple.cpp
Examples/Simple/Token/: Base.hpp  main_token.cpp
Examples/Simple/UnorderedCtor/: main_unordered_ctor.cpp
Examples/Simple_1/: CMakeLists.txt  main.cpp  main_part.cpp  main_simple_1.cpp  main_small.cpp
Examples/Structs/: Adapter.hpp  Armor.hpp  CustomWeapon.hpp  DefaultWeapon.hpp  Enemy.hpp  Helmet.hpp  NoNameWeapon.hpp  (+5 more)
Examples/nP/: CMakeLists.txt
Examples/nS/: CMakeLists.txt
Examples/nn/: CMakeLists.txt
Examples/nnaP/: CMakeLists.txt
Introduction/: CMakeLists.txt  Pipeing.md  Property.md  Traits.md  add_properties.md  main_forTags.cpp  main_tripleInt.cpp  order_list.md  parse_type_name.hpp
Introduction/default_values/: default_values.cpp  default_values2.cpp  default_values3.cpp
Introduction/general_features/: general_features.cpp
Introduction/order_list/: order_list.hpp  order_list_introduction.cpp  order_list_introduction_2.cpp  order_list_introduction_3.cpp  parse_type_name.hpp
Introduction/pipeing/: main_pipe_introduction.cpp  order_list.hpp  pipe_introduction.cpp
Introduction/tags/: tags_introduction.cpp
Introduction/traits/: example1.hpp  example2.hpp  example3.hpp  traits_introduction.cpp  type1.hpp  type2.hpp  type3.hpp  type4.hpp  type5.hpp
Object/: Action_impl.ipp  Attack.hpp  DefaultStrategies.hpp  Defend.hpp  Get.hpp  Heal.hpp  Object.cpp  Object.hpp  ObjectActions.hpp  ObjectModel.hpp
Premade/: PremadeDefaultStrategies.hpp  PremadeProperties.hpp  PremadeStrategies.hpp  PremadeTraits.hpp
Tests/: CMakeLists.txt  main_tests.cpp
Tests/AccesingTest/: CMakeLists.txt  accessing_properties_tests.cpp
Tests/AccessTraitsTest/: CMakeLists.txt  CustomAccessTest ArmorWear.cpp  CustomAccessTest CureHealth.cpp  CustomAccessTest Damage.cpp  CustomAccessTest Health.cpp  CustomAccessTest Name.cpp  CustomAccessTest Protection.cpp  CustomAccessTest Restore.cpp  CustomAccessTest UserProperty.cpp  CustomAccessTest UserType.cpp  TestType.hpp
Tests/AccessTraitsTest/Mocks/: MockCustomAccess.hpp  MockCustomAccessArmorWear.hpp  MockCustomAccessCureHealth.hpp  MockCustomAccessDamage.hpp  MockCustomAccessHealth.hpp  MockCustomAccessName.hpp  MockCustomAccessProtection.hpp  MockCustomAccessRestoreEffects.hpp  MockCustomAccessType.hpp
Tests/AddPropertyTest/: AddPropertyTest.cpp  CMakeLists.txt  PipeTest.cpp
Tests/AttackStrategyTest/: AttackStrategyTest.cpp  CMakeLists.txt
Usage/: DefaultStrategies.hpp  Properties.hpp  Strategies.hpp  Traits.hpp  With.hpp  default_behaviors.hpp  order_list.hpp
(+401 files in other folders)
