add_executable(introduction-1.0a_${addons} 1.0a.cpp)
add_executable(introduction-1.0b_${addons} 1.0b.cpp)
add_executable(introduction-1.0c_${addons} 1.0c.cpp)
add_executable(introduction-1.0d_${addons} 1.0d.cpp)
add_executable(introduction-1.0e_${addons} 1.0e.cpp)
add_executable(introduction-1.0f_${addons} 1.0f.cpp)

add_executable(introduction-1.1_${addons} 1.1.cpp)
