add_executable(main_small_${addons}
    main_small.cpp
    ${PROJECT_SOURCE_DIR}/Taumaturgia/Object/Object.cpp)

add_executable(main_simple_1_${addons}
    main_simple_1.cpp
    ${PROJECT_SOURCE_DIR}/Taumaturgia/Object/Object.cpp)

add_executable(a_main_${addons}
    main.cpp
    ${PROJECT_SOURCE_DIR}/Taumaturgia/Object/Object.cpp)

add_executable(a_main_part_${addons}
    main_part.cpp)
