add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../Main Main)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../MainExamples MainExamples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../Simple Simple)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../Introduction Introduction)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../Features Features)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../Introduction Introduction2)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../Tests Tests)
